# german-study

./: .gitignore  README.md  pyproject.toml
anki/decks/antonyms/: c1_antonyms_production_DE_RU.txt
anki/decks/confusables/: c1_contrast_de_ru_v1.tsv  confusables_curated_production_DE_RU.txt  confusables_first10_production_DE_RU.txt  confusables_production_DE_RU.txt
anki/decks/goethe/b2/: K11_RM_DE_RU.txt  K3_RM_DE_RU.txt  K9_RM_DE_RU.txt
anki/decks/goethe/c1/: c1_goethe_k1_medien_DE_RU.txt  c1_goethe_k2_daten_und_versicherungen_DE_RU.txt  c1_goethe_k3_wirtschaft_DE_RU.txt  c1_goethe_k4_vergangenheit_und_zukunft_DE_RU.txt
anki/decks/grammar/: b2_verbs_prepositions_production_DE_RU.txt  c1_verbs_prepositions_production_DE_RU.txt  c2_verbs_prepositions_production_DE_RU.txt  hin-und-her_cloze_DE_RU.txt  hin-und-her_production_DE_RU.txt
anki/decks/vocabulary/ai_ml/: c1_c2_ai_ml_production_DE_RU.txt
anki/decks/vocabulary/daten_und_versicherungen/: c1_goethe_k2_daten_und_versicherungen_DE_RU.txt
anki/note-types/: antonyms-production-ru.md  cloze.md  confusables-production-ru.md  production.md
anki/sources/confusables/: README.md  confusables_curated.txt
data/converted/: output.tsv
docs/: anki_note_type.md  anki_note_type_production.md  tagging.md
prompts/: antonyms_to_anki.md  confusables_to_anki.md  confusables_to_production_ru.md  definition_rules.md  fill_german_field.md  topic_vocab_to_production_ru.md  verbs_prepositions_to_production_ru.md
scripts/: convert_dictionary.py  merge_converted.py  validate_all.py  validate_tsv.py
tests/: sample_rows.tsv
(+48 files in other folders)
