[project]
name = "german-learner-dictionary"
version = "0.1.0"
description = "Prompt-first pipeline for converting German-Russian TSV dictionaries into German learner dictionaries."
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
